--- a/html/3.html
+++ b/html/3.html
@@ -1,4 +1,4 @@
-<div class="modal position-bottom-center fade m-width-570" id="playeah-pops-3" playeah-pops-show="bounceIn" playeah-pops-hide="bounceOut">
+<div class="modal position-bottom-center fade m-width-570" id="playeah-pops" playeah-pops-show="bounceIn" playeah-pops-hide="bounceOut">
     <div class="modal-dialog">
         <div class="modal-content bg-white">
             <div class="modal-header">
@@ -7,16 +7,16 @@
             <div class="modal-body">
                 <div class="col">
                     <div class="row">
-                        <div class="col-md-auto col-sm-auto px-0">
-                            {{lottie}}
-                            <img src="{{img}}" alt=""  class="pop-img"/>
+                        <div class="col-md-auto col-sm-auto px-0 pop-media">
+                            {{media}}
+                            
                         </div>
                         <div class="col-md-auto col-sm-auto align-self-center">
                             <div class="popup-title pop-heading">{{heading}}</div>
                             <p class="popup-text mb-0 pop-subheading">{{subheading}}</p>
                         </div>
                         <div class="col align-self-center pop-cta-section">
-                            <a href="{{cta_link}}" class="btn ml-5 text-white b-radius-25 pop-cta">{{cta_page}}</a>
+                            <a href="{{cta_link}}" class="btn ml-5 text-white b-radius-25 pop-cta">{{cta_text}}</a>
                         </div>
                     </div>
                 </div>       
