--- a/html/0.html
+++ b/html/0.html
@@ -16,7 +16,7 @@
                             <p class="popup-text mb-0 pop-subheading">{{subheading}}</p>
                         </div>
                         <div class="col align-self-center pop-cta-section">
-                            <a href="{{cta_link}}" class="btn ml-5 text-white b-radius-25 pop-cta">{{cta_text}}</a>
+                            <a href="{{cta_link}}" class="btn ml-5 b-radius-25 pop-cta">{{cta_text}}</a>
                         </div>
                     </div>
                 </div>       
