icons and animations

--- a/html/0.html
+++ b/html/0.html
@@ -1,4 +1,4 @@
-<div class="modal position-bottom-center fade m-width-570" id="playeah-pops" playeah-pops-show="bounceIn" playeah-pops-hide="bounceOut">
+<div class="modal position-bottom-center animate__animated animate__bounceIn fade m-width-570" id="playeah-pops"  playeah-pops-hide="bounceOut">
     <div class="modal-dialog">
         <div class="pp-modal-content ">
             <div class="pp-modal-header">
