--- a/html/10.html
+++ b/html/10.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-bottom-center m-width-300" id="playeah-pops" playeah-pops-show="slideInUp" playeah-pops-hide="slideOutDown">
+<div class="modal fade position-bottom-center m-width-300 animate__animated animate__slideInUp" id="playeah-pops"  playeah-pops-hide="slideOutDown">
     <div class="modal-dialog">
         <div class="pp-modal-content text-center">
             <div class="modal-header">
