--- a/html/11.html
+++ b/html/11.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-center-center m-width-640" id="playeah-pops" playeah-pops-show="zoomIn" playeah-pops-hide="zoomOut">
+<div class="modal fade position-center-center m-width-640 animate__animated animate__zoomIn" id="playeah-pops"  playeah-pops-hide="zoomOut">
     <div class="modal-dialog">
         <div class="pp-modal-content">
             <div class="pp-modal-header">
