--- a/html/12.html
+++ b/html/12.html
@@ -1,4 +1,4 @@
-<div class="modal fade m-width-270 position-top-center" id="playeah-pops" playeah-pops-show="fadeIn" playeah-pops-hide="fadeOut">
+<div class="modal fade m-width-270 position-top-center animate__animated animate__fadeIn" id="playeah-pops"  playeah-pops-hide="fadeOut">
     <div class="modal-dialog">
         <div class="pp-modal-content text-center">
             <div class="modal-header">
