--- a/html/3.html
+++ b/html/3.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-bottom-right m-width-370" id="playeah-pops" playeah-pops-show="slideInUp" playeah-pops-hide="slideOutDown">
+<div class="modal fade position-bottom-right animate__animated animate__slideInUp m-width-370" id="playeah-pops"  playeah-pops-hide="slideOutDown">
     <div class="modal-dialog">
         <div class="pp-modal-content text-center">
             <div class="pp-modal-header align-self-center pop-media">
