--- a/html/4.html
+++ b/html/4.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-bottom-center m-width-770" id="playeah-pops" playeah-pops-show="slideInUp" playeah-pops-hide="slideOutDown">
+<div class="modal fade position-bottom-center animate__animated animate__slideInUp m-width-770" id="playeah-pops"  playeah-pops-hide="slideOutDown">
     <div class="modal-dialog">
         <div class="pp-modal-content">
             <div class="pp-modal-header">
