--- a/html/6.html
+++ b/html/6.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-top-center m-width-300" id="playeah-pops" playeah-pops-show="slideInDown" playeah-pops-hide="slideOutUp">
+<div class="modal fade position-top-center animate__animated animate__slideInDown m-width-300" id="playeah-pops"  playeah-pops-hide="slideOutUp">
     <div class="modal-dialog">
         <div class="pp-modal-content text-center">
             <div class="pp-modal-header align-self-center">
