--- a/html/7.html
+++ b/html/7.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-center-center m-width-270" id="playeah-pops" playeah-pops-show="zoomIn" playeah-pops-hide="zoomOut">
+<div class="modal fade position-center-center animate__animated animate__zoomIn m-width-270" id="playeah-pops"  playeah-pops-hide="zoomOut">
     <div class="modal-dialog">
         <div class="pp-modal-content  text-center">
             <div class="pp-modal-header">
