--- a/html/16.html
+++ b/html/16.html
@@ -1,4 +1,4 @@
-<div class="modal position-center-center fade m-width-370" id="playeah-pops" playeah-pops-show="zoomIn" playeah-pops-hide="zoomOut">
+<div class="modal position-center-center fade m-width-370 animate__animated animate__zoomIn" id="playeah-pops"  playeah-pops-hide="zoomOut">
     <div class="modal-dialog">
         <div class="pp-modal-content  text-center">
             <div class="pp-modal-header align-self-center pop-media">
