--- a/html/2.html
+++ b/html/2.html
@@ -1,4 +1,4 @@
-<div class="modal position-bottom-right fade m-width-300" id="playeah-pops" playeah-pops-show="slideInUp" playeah-pops-hide="slideOutDown">
+<div class="modal position-bottom-right animate__animated animate__slideInUp fade m-width-300" id="playeah-pops"  playeah-pops-hide="slideOutDown">
     <div class="modal-dialog">
         <div class="pp-modal-content">
             <div class="pp-modal-body">
