--- a/html/5.html
+++ b/html/5.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-center-center m-width-300" id="playeah-pops" playeah-pops-show="slideInUp" playeah-pops-hide="slideOutDown">
+<div class="modal fade position-center-center animate__animated animate__slideInUp m-width-300" id="playeah-pops"  playeah-pops-hide="slideOutDown">
     <div class="modal-dialog">
         <div class="pp-modal-content">
             <div class="pp-modal-body">
