--- a/html/8.html
+++ b/html/8.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-center-center m-width-470" id="playeah-pops" playeah-pops-show="zoomIn" playeah-pops-hide="zoomOut">
+<div class="modal fade position-center-center animate__animated animate__zoomIn m-width-470" id="playeah-pops"  playeah-pops-hide="zoomOut">
     <div class="modal-dialog">
         <div class="pp-modal-content">
             <div class="pp-modal-body">
