--- a/html/0.html
+++ b/html/0.html
@@ -8,15 +8,15 @@
                 <div class="col">
                     <div class="row">
                         <div class="col-md-auto col-sm-auto px-0 pop-media">
-                            {{media}}
-                            <img src="{{img_src}}"  alt="" />
+                            {media}
+                            <img src="{img_src}"  alt="" />
                         </div>
                         <div class="col-md-auto col-sm-auto align-self-center col-copy">
-                            <div class="popup-title pop-heading">{{heading}}</div>
-                            <p class="popup-text mb-0 pop-subheading">{{subheading}}</p>
+                            <div class="popup-title pop-heading">{heading}</div>
+                            <p class="popup-text mb-0 pop-subheading">{subheading}</p>
                         </div>
                         <div class="col align-self-center pop-cta-section">
-                            <button data-href="{{cta_link}}" class="btn ml-5 b-radius-25 pop-cta">{{cta_text}}</button>
+                            <button data-href="{cta_link}" class="btn ml-5 b-radius-25 pop-cta">{cta_text}</button>
                         </div>
                     </div>
                 </div>       
