--- a/html/1.html
+++ b/html/1.html
@@ -3,12 +3,12 @@
         <div class="pp-modal-content text-center">
             <div class="pp-modal-header align-self-center pop-media">
                 <button type="button" class="close close-dark" data-dismiss="modal"></button>
-                {{media}}
-                <img class="mb-4" src="{{img_src}}" srcset="" alt="" />
+                {media}
+                <img class="mb-4" src="{img_src}" srcset="" alt="" />
             </div>
             <div class="pp-modal-body">
-                <div class="popup-title pop-heading">{{heading}}</div>
-                <p class="popup-text mb-0 pop-heading">{{subheading}}</p>
+                <div class="popup-title pop-heading">{heading}</div>
+                <p class="popup-text mb-0 pop-heading">{subheading}</p>
             </div>
         </div>
     </div>
