--- a/html/10.html
+++ b/html/10.html
@@ -5,10 +5,10 @@
                 <button type="button" class="close close-light" data-dismiss="modal"></button>
             </div>
             <div class="pp-modal-body">
-                <div class="popup-title pop-heading">{{heading}}</div>
+                <div class="popup-title pop-heading">{heading}</div>
                 <div class="popup-image-inner pop-media">
-                    {{media}}
-                    <img class="popup-image position-absolute" src="{{img_src}}" alt="" />
+                    {media}
+                    <img class="popup-image position-absolute" src="{img_src}" alt="" />
                 </div>
             </div>
         </div>
