--- a/html/14.html
+++ b/html/14.html
@@ -3,15 +3,15 @@
         <div class="pp-modal-content  text-center">
             <div class="pp-modal-header align-self-center pop-media">
                 <button type="button" class="close close-dark" data-dismiss="modal"></button>
-                {{media}}
-                <img src="{{img_src}}"  alt="" />
+                {media}
+                <img src="{img_src}"  alt="" />
             </div>
             <div class="pp-modal-body">
-                <div class="popup-title pop-heading">{{heading}}</div>
-                <p class="popup-text mb-0 pop-subheading">{{subheading}}</p>
+                <div class="popup-title pop-heading">{heading}</div>
+                <p class="popup-text mb-0 pop-subheading">{subheading}</p>
             </div>
             <div class="pp-modal-footer justify-content-center pop-cta-section">
-                <a href="{{cta_link}}"  target="_blank" class="btn btn-block font-weight-bold btn-link pop-cta">{{cta_text}}</a>
+                <a href="{cta_link}"  target="_blank" class="btn btn-block font-weight-bold btn-link pop-cta">{cta_text}</a>
             </div>
         </div>
     </div>
