--- a/html/2.html
+++ b/html/2.html
@@ -3,9 +3,9 @@
         <div class="pp-modal-content">
             <div class="pp-modal-body">
                 
-                <div class="popup-title mb-3 pop-heading">{{heading}}</div>  
-                <p class="popup-text pop-subheading">{{subheading}}</p>
-                <button data-href="{{cta_link}}" type="button" class="btn btn-block font-weight-bold pop-cta-section">{{cta_text}}</button>
+                <div class="popup-title mb-3 pop-heading">{heading}</div>  
+                <p class="popup-text pop-subheading">{subheading}</p>
+                <button data-href="{cta_link}" type="button" class="btn btn-block font-weight-bold pop-cta-section">{cta_text}</button>
             </div>
         </div>
     </div>
