--- a/html/4.html
+++ b/html/4.html
@@ -8,11 +8,11 @@
                 <div class="col">
                     <div class="row">
                         <div class="col-md-8 col-sm-12 px-0 align-self-center">
-                            <div class="popup-title  mb-2 pop-heading">{{heading}}</div>
-                            <p class="popup-text mb-0 pop-subheading">{{subheading}}</p>
+                            <div class="popup-title  mb-2 pop-heading">{heading}</div>
+                            <p class="popup-text mb-0 pop-subheading">{subheading}</p>
                         </div>
                         <div class="col-md-4 col-sm-12 pr-0 align-self-center text-center pop-cta-section">
-                            <button data-href="{{cta_link}}" class="btn close font-weight-bold b-radius-30 pop-cta" >{{cta_text}}</button>
+                            <button data-href="{cta_link}" class="btn close font-weight-bold b-radius-30 pop-cta" >{cta_text}</button>
                         </div>
                     </div>
                 </div>       
