--- a/html/5.html
+++ b/html/5.html
@@ -5,17 +5,17 @@
                 <div class="col">
                     <div class="row">
                         <div class="col-md-auto px-0 pop-media">
-                            {{media}}
-                            <img src="{{img_src}}"  alt="" />
+                            {media}
+                            <img src="{img_src}"  alt="" />
                         </div>
                         <div class="col pr-0 align-self-center">
-                            <p class="popup-text font-weight-light mb-0 pop-heading">{{heading}}</p>
+                            <p class="popup-text font-weight-light mb-0 pop-heading">{heading}</p>
                         </div>
                     </div>
                 </div>       
             </div>
             <div class="pp-modal-footer pop-cta-section">
-                <a class="btn btn-block  font-weight-bold btn-link" href="{{cta_link}}" target="_blank">{{cta_text}}</a>
+                <a class="btn btn-block  font-weight-bold btn-link" href="{cta_link}" target="_blank">{cta_text}</a>
             </div>
         </div>
     </div>
