--- a/html/8.html
+++ b/html/8.html
@@ -6,15 +6,15 @@
                     <div class="row">
                         <div class="col pl-0 pr-3">
                             <div class="popup-inner">
-                                <div class="popup-title pop-heading">{{heading}}</div>
-                                <p class="popup-text pop-subheading">{{subheading}}</p>
-                                <a href="{{cta_link}}" class="btn  font-weight-bold pop-cta-section">{{cta_text}}</a>
+                                <div class="popup-title pop-heading">{heading}</div>
+                                <p class="popup-text pop-subheading">{subheading}</p>
+                                <a href="{cta_link}" class="btn  font-weight-bold pop-cta-section">{cta_text}</a>
                             </div>
                         </div>
                         <div class="col px-0">
                             <div class="popup-image-inner pop-media">
-                                {{media}}
-                                <img class="position-absolute popup-image" src="{{img_src}}"  alt="" />
+                                {media}
+                                <img class="position-absolute popup-image" src="{img_src}"  alt="" />
                             </div>
                         </div>
                     </div>
