--- a/html/11.html
+++ b/html/11.html
@@ -8,9 +8,9 @@
                 <div class="col">
                     <div class="row">
                         <div class="col col-sm-8 pl-0 pr-3">
-                            <div class="popup-title pop-heading">{{heading}}</div>
-                            <p class="popup-text pop-subheading">{{subheading}}</p>
-                            <a href="{{cta_link}}" target="_blank" class="btn  font-weight-bold pop-cta pop-cta-section">{{cta_text}}</a>
+                            <div class="popup-title pop-heading">{heading}</div>
+                            <p class="popup-text pop-subheading">{subheading}</p>
+                            <a href="{cta_link}" target="_blank" class="btn  font-weight-bold pop-cta pop-cta-section">{cta_text}</a>
                         </div>
                         <div class="col px-0">
                             <div class="popup-image-inner">
