--- a/html/13.html
+++ b/html/13.html
@@ -8,13 +8,13 @@
                 <div class="col">
                     <div class="row">
                         <div class="col order-last popup-inner">
-                            <div class="popup-title  mb-1 pop-heading">{{heading}}</div>
-                            <p class="popup-text pop-subheading">{{subheading}}</p>
-                            <a href="{{cta_link}}" target="_blank" class="btn  font-weight-bold transition-all pop-cta pop-cta-section">{{cta_text}}</a>
+                            <div class="popup-title  mb-1 pop-heading">{heading}</div>
+                            <p class="popup-text pop-subheading">{subheading}</p>
+                            <a href="{cta_link}" target="_blank" class="btn  font-weight-bold transition-all pop-cta pop-cta-section">{cta_text}</a>
                         </div>
                         <div class="col-md-auto order-first popup-image-inner px-0 pop-media">
-                            {{media}}
-                            <img class="popup-image position-absolute" src="{{img_src}}"  alt="" />
+                            {media}
+                            <img class="popup-image position-absolute" src="{img_src}"  alt="" />
                         </div>
                     </div>
                 </div>
