--- a/html/16.html
+++ b/html/16.html
@@ -3,13 +3,13 @@
         <div class="pp-modal-content  text-center">
             <div class="pp-modal-header align-self-center pop-media">
                 <button type="button" class="close close-dark" data-dismiss="modal"></button>
-                {{media}}
-                <img src="{{img_src}}"  alt="" />
+                {media}
+                <img src="{img_src}"  alt="" />
             </div>
             <div class="pp-modal-body">
-                <div class="popup-title pop-heading">{{heading}}</div>
-                <p class="popup-text mb-5 pop-subheading">{{subheading}}</p>
-                <a href="{{cta_link}}" target="_blank" class="btn btn-block text-white font-weight-bold pop-cta pop-cta-section">{{cta_text}}</a>
+                <div class="popup-title pop-heading">{heading}</div>
+                <p class="popup-text mb-5 pop-subheading">{subheading}</p>
+                <a href="{cta_link}" target="_blank" class="btn btn-block text-white font-weight-bold pop-cta pop-cta-section">{cta_text}</a>
             </div>
         </div>
     </div>
