--- a/html/3.html
+++ b/html/3.html
@@ -3,12 +3,12 @@
         <div class="pp-modal-content text-center">
             <div class="pp-modal-header align-self-center pop-media">
                 <button type="button" class="close close-light" data-dismiss="modal"></button>
-                {{media}}
-                <img class="popup-image" src="{{img_src}}" srcset="" alt="" />
+                {media}
+                <img class="popup-image" src="{img_src}" srcset="" alt="" />
             </div>
             <div class="pp-modal-body">
-                <div class="popup-title  mb-5 pop-heading">{{heading}}</div>
-                <a href="{{cta_link}}"  target="_blank" class="btn font-weight-bold pop-cta pop-cta-section">{{cta_text}}</a>
+                <div class="popup-title  mb-5 pop-heading">{heading}</div>
+                <a href="{cta_link}"  target="_blank" class="btn font-weight-bold pop-cta pop-cta-section">{cta_text}</a>
             </div>
         </div>
     </div>
