--- a/html/6.html
+++ b/html/6.html
@@ -3,13 +3,13 @@
         <div class="pp-modal-content text-center">
             <div class="pp-modal-header align-self-center">
                 <button type="button" class="close close-light" data-dismiss="modal"></button>
-                {{media}}
-                <img class="mb-4" src="{{img_src}}"  alt="" />
+                {media}
+                <img class="mb-4" src="{img_src}"  alt="" />
             </div>
             <div class="pp-modal-body">
-                <div class="popup-title mb-1 pop-heading">{{heading}}</div>
-                <p class="popup-text mb-4 pop-subheading">{{subheading}}</p>
-                <a href="{{cta_link}}" target="_blank" class="btn  b-radius-25 font-weight-bold text-uppercase pop-cta pop-cta-section">{{cta_text}}</a>
+                <div class="popup-title mb-1 pop-heading">{heading}</div>
+                <p class="popup-text mb-4 pop-subheading">{subheading}</p>
+                <a href="{cta_link}" target="_blank" class="btn  b-radius-25 font-weight-bold text-uppercase pop-cta pop-cta-section">{cta_text}</a>
             </div>
         </div>
     </div>
