--- a/html/7.html
+++ b/html/7.html
@@ -6,11 +6,11 @@
             </div>
             <div class="pp-modal-body">
                 <div class="popup-title mb-4 pop-media">
-                    {{media}}
-                    <img src="{{img_src}}" alt="" />
+                    {media}
+                    <img src="{img_src}" alt="" />
                 </div> 
-                <p class="popup-text mb-4 pop-subheading">{{subheading}}</p> 
-                <a href="{{cta_link}}" target="_blank" class="btn b-radius-30 font-weight-bold  pop-cta  pop-cta-section">{{cta_text}}</a>
+                <p class="popup-text mb-4 pop-subheading">{subheading}</p> 
+                <a href="{cta_link}" target="_blank" class="btn b-radius-30 font-weight-bold  pop-cta  pop-cta-section">{cta_text}</a>
             </div>
         </div>
     </div>
