--- a/html/9.html
+++ b/html/9.html
@@ -9,15 +9,15 @@
                     <div class="row">
                         <div class="col-md-auto px-0">
                             <div class="popup-image-inner pop-media">
-                                {{media}}
-                                <img class="popup-image position-absolute" src="{{img_src}}"  alt="" />    
+                                {media}
+                                <img class="popup-image position-absolute" src="{img_src}"  alt="" />    
                             </div>
                         </div>
                         <div class="col px-0">
                             <div class="popup-inner">
-                                <div class="popup-title  mb-1 pop-heading">{{heading}}</div>
-                                <p class="popup-text  pop-subheading">{{subheading}}</p>
-                                <a href="{{cta_link}}"  target="_blank" class="btn  font-weight-bold pop-cta pop-cta-section">{{cta_text}}</a>
+                                <div class="popup-title  mb-1 pop-heading">{heading}</div>
+                                <p class="popup-text  pop-subheading">{subheading}</p>
+                                <a href="{cta_link}"  target="_blank" class="btn  font-weight-bold pop-cta pop-cta-section">{cta_text}</a>
                             </div>
                         </div>
                     </div>
