fixed close button

--- a/html/14.html
+++ b/html/14.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="pp-modal-content  text-center">
             <div class="pp-modal-header align-self-center pop-media">
-                <button type="button" class="close close-dark" data-dismiss="modal"></button>
+                <button type="button" class="close " data-dismiss="modal"><svg fill="{color_heading}" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 32 32" width="32px" height="32px"><path d="M 16 4 C 9.3844239 4 4 9.3844287 4 16 C 4 22.615571 9.3844239 28 16 28 C 22.615576 28 28 22.615571 28 16 C 28 9.3844287 22.615576 4 16 4 z M 16 6 C 21.534697 6 26 10.465307 26 16 C 26 21.534693 21.534697 26 16 26 C 10.465303 26 6 21.534693 6 16 C 6 10.465307 10.465303 6 16 6 z M 12.707031 11.292969 L 11.292969 12.707031 L 14.585938 16 L 11.292969 19.292969 L 12.707031 20.707031 L 16 17.414062 L 19.292969 20.707031 L 20.707031 19.292969 L 17.414062 16 L 20.707031 12.707031 L 19.292969 11.292969 L 16 14.585938 L 12.707031 11.292969 z"/></svg></button>
                 {media}
                 <img src="{img_src}"  alt="" />
             </div>
