--- a/html/1.html
+++ b/html/1.html
@@ -1,4 +1,4 @@
-<div class="modal position-center-center animate__animated animate__zoomIn fade m-width-370" id="playeah-pops"  playeah-pops-hide="zoomOut">
+<div class="modal {position} animate__animated animate__{animation_in} fade m-width-370" id="playeah-pops"  playeah-pops-hide="{animation_out}">
     <div class="modal-dialog">
         <div class="pp-modal-content text-center">
             <div class="pp-modal-header align-self-center pop-media">
