--- a/html/10.html
+++ b/html/10.html
@@ -1,4 +1,4 @@
-<div class="modal fade position-bottom-center m-width-300 animate__animated animate__slideInUp" id="playeah-pops"  playeah-pops-hide="slideOutDown">
+<div class="modal fade {position} m-width-300 animate__animated animate__{animation_in}" id="playeah-pops"  playeah-pops-hide="{animation_out}">
     <div class="modal-dialog">
         <div class="pp-modal-content text-center">
             <div class="pp-modal-header">
