--- a/html/12.html
+++ b/html/12.html
@@ -1,4 +1,4 @@
-<div class="modal fade m-width-270 position-top-center animate__animated animate__fadeIn" id="playeah-pops"  playeah-pops-hide="fadeOut">
+<div class="modal fade m-width-270 {position} animate__animated animate__{animation_in}" id="playeah-pops"  playeah-pops-hide="{animation_out}">
     <div class="modal-dialog">
         <div class="pp-modal-content text-center">
             <div class="modal-header">
