--- a/html/13.html
+++ b/html/13.html
@@ -1,4 +1,4 @@
-<div class="modal position-bottom-center fade m-width-470 animate__animated animate__slideInUp" id="playeah-pops"  playeah-pops-hide="slideOutDown">
+<div class="modal {position} fade m-width-470 animate__animated animate__{animation_in}" id="playeah-pops"  playeah-pops-hide="{animation_out}">
     <div class="modal-dialog">
         <div class="pp-modal-content">
             <div class="pp-modal-header">
