--- a/html/14.html
+++ b/html/14.html
@@ -1,4 +1,4 @@
-<div class="modal position-center-center fade m-width-270 animate__animated animate__zoomIn" id="playeah-pops"  playeah-pops-hide="zoomOut">
+<div class="modal {position} fade m-width-270 animate__animated animate__{animation_in}" id="playeah-pops"  playeah-pops-hide="{animation_out}">
     <div class="modal-dialog">
         <div class="pp-modal-content  text-center">
             <div class="pp-modal-header align-self-center pop-media">
