--- a/html/15.html
+++ b/html/15.html
@@ -1,4 +1,4 @@
-<div class="modal fade m-width-370 animate__animated animate__fadeIn" id="playeah-pops"  playeah-pops-hide="fadeOut">
+<div class="modal fade m-width-370 {position} animate__animated animate__{animation_in}" id="playeah-pops"  playeah-pops-hide="{animation_out}">
     <div class="modal-dialog">
         <div class="pp-modal-content ">
             <div class="pp-modal-header position-relative pop-media">
