--- a/html/10.html
+++ b/html/10.html
@@ -8,7 +8,7 @@
                 <div class="popup-title pop-heading">{heading}</div>
                 <div class="popup-image-inner pop-media">
                     {media}
-                    <img class="popup-image position-absolute" src="{img_src}" alt="" />
+                    <img class="popup-image " src="{img_src}" alt="" />
                 </div>
             </div>
         </div>
